<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/azul_obscuro"
    android:id="@+id/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_detalle"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/master_chief"/>


        <TextView
            android:id="@+id/txt_nombre_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jefe_maestro"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/amarillo"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/img_detalle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_biografia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bio_jefe_maestro"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/txt_nombre_detalle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_nombre_usuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/nombre"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/amarillo"
            app:hintTextColor="@color/amarillo"
            app:layout_constraintTop_toBottomOf="@id/txt_biografia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_comentarios"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/comentario"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/amarillo"
            app:layout_constraintTop_toBottomOf="@id/layout_nombre_usuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publicar"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_comentarios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captcha"
            android:textColor="@color/white"
            android:buttonTint="@color/amarillo"
            app:layout_constraintTop_toTopOf="@id/btn_like"
            app:layout_constraintBottom_toBottomOf="@id/btn_like"
            app:layout_constraintStart_toEndOf="@id/btn_like"
            android:layout_marginStart="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>